--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -20,12 +20,22 @@
     </div>
   </nav>
 
+
   <div class="row">
-    <form class="col s12" action="vessel/" method="get">
-      <input placeholder="Maritime Mobile Service Identity" id="MMSI" name="MMSI" type="text" class="validate">
-      <label for="MMSI">Maritime Mobile Service Identity</label>
-    </form>
-  </div
+    <div class="col s12 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">Card Title</span>
+          <p>I am a very simple card. I am good at containing small bits of information.
+          I am convenient because I require little markup to use effectively.</p>
+        </div>
+        <div class="card-action">
+          <a href="#">This is a link</a>
+          <a href="#">This is a link</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
