--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -12,26 +12,25 @@
   <body>
 
   <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">RGUTrack</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Vessels</a></li>
-      </ul>
+    <div class="nav-wrapper ##009688 teal">
+      <a href="#" class="brand-logo center ">Ship Happens ¯\_(ツ)_/¯ </a>
     </div>
   </nav>
 
-
-  <div class="row">
-    <div class="col s12 m6">
-      <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-          <span class="card-title">Card Title</span>
-          <p>I am a very simple card. I am good at containing small bits of information.
-          I am convenient because I require little markup to use effectively.</p>
-        </div>
-        <div class="card-action">
-          <a href="#">This is a link</a>
-          <a href="#">This is a link</a>
+  <!-- <i class="material-icons">directions_boat</i> -->
+  <div class="center-align">
+    <div class="row">
+      <div class="col s10 offset-s1">
+        <div class="card #e57373 red lighten-2">
+          <div class="card-content white-text">
+            <span class="card-title">AH-HOY there matey! Lets find ya some ships!</span>
+              <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/30950-200.png">
+          </div>
+          <div class="card-content white-text">
+         <p style="Font-size:20px">To begin, either search for a ships name or click for a random ship to be chosen.</p>
+       </div>
+          <a class="waves-effect waves-light btn-large" href="/heatmap"><i class="material-icons left">directions_boat</i>Random Vessel</a>
+          <a class="waves-effect waves-light btn-large" href="/heatmap"><i class="material-icons left">flare</i>Heatmap</a>
         </div>
       </div>
     </div>
