Refactoring of navigation bar.

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -11,11 +11,7 @@
   </head>
   <body>
 
-  <nav>
-    <div class="nav-wrapper ##009688 teal">
-      <a href="#" class="brand-logo center ">Ship Happens ¯\_(ツ)_/¯ </a>
-    </div>
-  </nav>
+  <%- include('nav'); %>
 
   <!-- <i class="material-icons">directions_boat</i> -->
   <div class="center-align">
