--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -29,7 +29,8 @@
           <div class="card-content white-text">
          <p style="Font-size:20px">To begin, either search for a ships name or click for a random ship to be chosen.</p>
        </div>
-          <a class="waves-effect waves-light btn-large" href="/heatmap"><i class="material-icons left">directions_boat</i>Random Vessel</a>
+          <a class="waves-effect waves-light btn-large" href="/vessel/random"><i class="material-icons left">directions_boat</i>Random Vessel</a>
+          <a class="waves-effect waves-light btn-large" href="/vessel/1"><i class="material-icons left">directions_boat</i>Browses Vessels</a>
           <a class="waves-effect waves-light btn-large" href="/heatmap"><i class="material-icons left">flare</i>Heatmap</a>
         </div>
       </div>
