Refactoring for navigation bar on browse page.

--- a/app/views/browse.ejs
+++ b/app/views/browse.ejs
@@ -15,14 +15,7 @@
   </head>
   <body>
 
-  <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">RGUTrack</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Vessels</a></li>
-      </ul>
-    </div>
-  </nav>
+  <%- include('nav'); %>
 
   <ul class="pagination">
 
