--- a/app/views/nav.ejs
+++ b/app/views/nav.ejs
@@ -1,5 +1,5 @@
 <nav>
   <div class="nav-wrapper ##009688 teal">
-    <a href="#" class="brand-logo center ">Ship Happens ¯\_(ツ)_/¯ </a>
+    <a href="/" class="brand-logo center ">Ship Happens ¯\_(ツ)_/¯ </a>
   </div>
 </nav>
