Almost implemented the random ship, conor is taking over

--- a/app/views/vessel.ejs
+++ b/app/views/vessel.ejs
@@ -15,14 +15,11 @@
   </head>
   <body>
 
-  <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">RGUTrack</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Vessels</a></li>
-      </ul>
-    </div>
-  </nav>
+    <nav>
+      <div class="nav-wrapper ##009688 teal">
+        <a href="/" class="brand-logo center ">Ship Happens ¯\_(ツ)_/¯ </a>
+      </div>
+    </nav>
 
   <div id='map' style='position: absolute; min-width: 100%; min-height: 100%;'></div>
 <script>
