ITS AHOY NOT AH-HOY

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -19,7 +19,7 @@
       <div class="col s10 offset-s1">
         <div class="card #e57373 red lighten-2">
           <div class="card-content white-text">
-            <span class="card-title">AH-HOY there matey! Lets find ya some ships!</span>
+            <span class="card-title">AHOY there matey! Lets find ya some ships!</span>
               <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/30950-200.png">
           </div>
           <div class="card-content white-text">
